other-vpol/block-images-with-volumes/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  automountServiceAccountToken: false
  containers:
  - name: image-vol
    image: public.ecr.aws/docker/library/redis@sha256:0b2216cb86345d3ece3696ded9ae59ddf1c65a9e8d48188db1784f1a1f95b448
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: image-vol
    image: public.ecr.aws/docker/library/redis@sha256:0b2216cb86345d3ece3696ded9ae59ddf1c65a9e8d48188db1784f1a1f95b448
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  automountServiceAccountToken: false
  containers:
  - name: image-vol
    image: public.ecr.aws/docker/library/redis@sha256:0b2216cb86345d3ece3696ded9ae59ddf1c65a9e8d48188db1784f1a1f95b448
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
