other-vpol/block-images-with-volumes/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-images-with-volumes
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../block-images-with-volumes.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: block-images-with-volumes
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy block-images-with-volumes failed')): true
        file: pods-bad.yaml
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy block-images-with-volumes failed')): true
        file: podcontrollers-bad.yaml
